@@ -52,6 +52,7 @@ where XXXXXX is the bug number as listed below.
 407218  Add support for the copy_file_range syscall
 407307  Intercept stpcpy also in ld.so for arm64
 407764  drd cond_post_wait gets wrong (?) condition on s390x z13 system
+408009  Expose rdrand and f16c even on avx if host cpu supports them
 n-i-bz  Fix minor one time leaks in dhat.
 n-i-bz  Add --run-cxx-freeres=no in outer args to avoid inner crashes.
 
